# rag-plus

./: .editorconfig  .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/docs/: Dockerfile  mdx-components.tsx  next.config.js  package.json  tsconfig.json
apps/docs/app/: layout.tsx  page.tsx
apps/docs/app/pdr/: page.tsx
apps/docs/content/: index.mdx  project-decision-record.mdx
apps/orchestrator/: Dockerfile  pyproject.toml
apps/orchestrator/src/orchestrator/: __init__.py  main.py  metrics.py
apps/rag-api/: Dockerfile  package.json
apps/rag-api/src/: health.ts  index.ts  metrics.ts
config/: models.json
content/kb/alerts/: _README.mdx
content/kb/architecture/: _README.mdx
content/kb/postmortems/: _README.mdx
content/kb/runbooks/: _README.mdx
infra/: docker-compose.yml
infra/grafana/dashboards/: rag-plus-overview.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/otel/: otel-collector.yml
infra/prometheus/: prometheus.yml
scripts/: dev.ps1  dev.sh
