[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-plus-orchestrator"
version = "0.1.0"
description = "Orchestrator stub service for rag-plus"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
orchestrator = "orchestrator.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
